<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
<TextView
    android:id="@+id/pop_sort1"
    android:text="@string/sum_sort"
    android:textSize="25sp"
    android:textStyle="bold"
    android:gravity="center"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_width="match_parent"
    android:layout_height="40dp"/>
    <TextView
        android:id="@+id/pop_sort2"
        android:text="@string/newest"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/pop_sort1"
        android:layout_width="match_parent"
        android:layout_height="40dp"/>
    <TextView
        android:id="@+id/pop_sort3"
        android:text="@string/hottest"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/pop_sort2"
        android:layout_width="match_parent"
        android:layout_height="40dp"/>
    <TextView
        android:id="@+id/pop_sort4"
        android:text="@string/price_high_low"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/pop_sort3"
        android:layout_width="match_parent"
        android:layout_height="40dp"/>
    <TextView
        android:id="@+id/pop_sort5"
        android:text="@string/price_low_high"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/pop_sort4"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>