<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.PhonePaw_Login">
    <ImageView
        android:id="@+id/common_back_icon_vl"
        android:src="@drawable/common_back_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="352dp"
        android:layout_marginTop="12dp"
        android:layout_width="10dp"
        android:layout_height="18dp"
        />
    <ImageView
        android:id="@+id/public_login_logo_vl"
        android:src="@drawable/public_login_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="59dp"
        android:layout_marginRight="61dp"
        android:layout_marginTop="89dp"
        android:layout_width="256dp"
        android:layout_height="82dp"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="33dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="224dp"
        android:layout_width="308dp"
        android:layout_height="228dp">
        <TextView
            android:id="@+id/phone_paw_edphone_vl"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="9dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="请输入手机号"
            android:textColor="#bebebe"
            android:textSize="15sp"
            android:gravity="left"
            />

        <TextView
            android:id="@+id/phone_paw_line1_vl"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="33dp"
            android:layout_width="271dp"
            android:layout_height="1dp"
            android:background="#bebebe"
            />
        <TextView
            android:id="@+id/phone_paw_getverif_vl"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:background="@drawable/shape_phone_paw"
            android:layout_marginLeft="228dp"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:text="@string/get_verfi"
            android:gravity="center"
            android:textSize="12sp"
            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/phone_paw_edverifcode_vl"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="42dp"
            android:layout_marginTop="73dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="请输入验证码"
            android:textColor="#bebebe"
            android:textSize="15sp"
            android:gravity="left"
            />

        <TextView
            android:id="@+id/phone_paw_line2_vl"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="97dp"
            android:layout_width="271dp"
            android:layout_height="1dp"
            android:background="#bebebe"
            />
        <TextView
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="156dp"
            android:background="@drawable/shape_phone_paw"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/login"
            android:textSize="17sp"
            android:gravity="center"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/find_passw_vl"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/phone_reg"
            android:textColor="@color/grey"/>
        <TextView
            android:id="@+id/passWord_login_vl"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="密码登录"
            android:textColor="@color/grey"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:id="@+id/phone_paw_line3_vl"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="567dp"
        android:layout_width="308dp"
        android:layout_height="1dp"
        android:background="#bebebe"
        />
    <TextView
        android:id="@+id/phone_paw_sanf_login_vl"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="138dp"
        android:layout_marginTop="562dp"
        android:layout_marginRight="148dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="或从以下方式登录"
        android:textColor="#bebebe"
        />
    <ImageView
        android:id="@+id/common_share_wx_vl"
        android:src="@drawable/common_share_wx"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="114dp"
        android:layout_marginRight="227dp"
        android:layout_marginTop="611dp"
        android:layout_width="35dp"
        android:layout_height="36dp"
        />
    <TextView
        android:id="@+id/phone_paw_wx_login_vl"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="111dp"
        android:layout_marginTop="658dp"
        android:layout_marginRight="225dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wx_login"
        android:textColor="#bebebe"
        android:textSize="10sp"
        />
    <ImageView
        android:id="@+id/common_share_qq_vl"
        android:src="@drawable/common_share_qq"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="221dp"
        android:layout_marginRight="119dp"
        android:layout_marginTop="611dp"
        android:layout_width="35dp"
        android:layout_height="36dp"
        />
    <TextView
        android:id="@+id/phone_paw_qq_login_vl"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="221dp"
        android:layout_marginTop="658dp"
        android:layout_marginRight="119dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qq_login"
        android:textColor="#bebebe"
        android:textSize="10sp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>